button hover color change

--- a/assets/sass/0-settings/_color-scheme.scss
+++ b/assets/sass/0-settings/_color-scheme.scss
@@ -33,7 +33,7 @@
   // Button
   --button-color: var(--white);
   --button-background-color: var(--primary-color);
-  --button-background-hover: #4035c8;
+  --button-background-hover: #B287A3;
 
   // Border
   --border-color: var(--gray);
