--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -29,7 +29,7 @@
           <div class="contact-description">{{ .Content }}</div>
         {{ end }}
       </div>
-      <form class="form" action="{{ if .Site.Params.contact.contact__email }}https://formspree.io/f/{{.Site.Params.contact.contact__email}}{{ else }}#{{ end }}" method="POST">
+      <form class="form" action="{{ if .Site.Params.contact.contact__email }}https://formspree.io/f/{{.Site.Params.contact.contact__email}}{{ else }}#{{ end }}" method="POST" netlify>
         <div class="form__group">
           <label class="form__label screen-reader-text" for="form-name">Name</label>
           <input class="form__input" id="form-name" type="text" name="name" placeholder="Name" required>
